--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
     "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.8"
   },
+  "dependencies": {
+    "http-server": "^0.9.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.8"
+  },
   "scripts": {
 
     "prestart": "npm install",
